--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,6 +10,23 @@
     </group>
 
     <group
+        android:id="@+id/app_sections"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/drawer_item_mHBSTraining"
+            android:icon="@drawable/common_full_open_on_phone"
+            android:title="@string/drawer_item_mHBSTraining" />
+        <item
+            android:id="@+id/drawer_item_eHBB"
+            android:icon="@drawable/common_full_open_on_phone"
+            android:title="@string/drawer_item_eHBB" />
+        <item
+            android:id="@+id/drawer_item_safeDelivery"
+            android:icon="@drawable/common_full_open_on_phone"
+            android:title="@string/drawer_item_safeDelivery" />
+    </group>
+
+    <group
         android:id="@+id/close_section"
         android:checkableBehavior="single">
         <item
